manifests/Traefik-forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 4181
      targetPort: 4181
  type: ClusterIP
