manifests/Traefik-forward-auth/ingressroute.yaml
# This IngressRoute exposes the forward auth service itself
# so PocketID can redirect back to it after authentication
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik-forward-auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tfa.smeyer.ca`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
